2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle slash in HFS label.

	* grub-core/fs/hfs.c (macroman_to_utf8): New argument slash_translate.
	(grub_hfs_dir): Tanslate slash.
	(grub_hfs_label): Don't translate slash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_ls_list_devices): Disable
	network protocol listing since it introduces problematic dependency on
	net module.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Add Yeeloong verified hash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Init video early on yeeloong to avoid being rebooted by watchdog.

	* grub-core/Makefile.am (gensm712): New target.
	(sm712_start.S): Likewise.
	(boot/mips/loongson/fwstart.S): Depend on sm712_start.S
	* grub-core/boot/mips/loongson/fwstart.S [!FULOONG2F]: Init SM712.
	* grub-core/video/sm712.c [GENINIT]: Generate compact init procedure
	description.
	* include/grub/vga.h: Move registry definitions to...
	* include/grub/vgaregs.h: ... here.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/decompressor/minilib.c (grub_memcmp): Fix the compare
	signedness.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix dvhtool invocation. Add arc to the list of
	platforms with firmware disk drivers in the core.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (scan_disk) [GRUB_UTIL]: Put more
	informative verbose message.
	(read_lv): Handle 64-bit segment size.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (grub_lvm_getvalue): Handle 64-bit values.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_iterate_dir_next): Don't stop on a space
	character but still remove trainling spaces.
	(grub_fat_label): Ignore archive flag.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>
